log
Thu 20 Apr 2023 11:48:48 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:5: error: ‘new’ undeclared (first use in this function)
   42 |     new->lower_than = lower_than;
      |     ^~~
treemap.c:42:5: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:41:12: error: unused variable ‘tree’ [-Werror=unused-variable]
   41 |   TreeMap *tree=
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
ed4ea17
Thu 20 Apr 2023 11:48:51 PM UTC: 
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:5: error: ‘new’ undeclared (first use in this function)
   42 |     new->lower_than = lower_than;
      |     ^~~
treemap.c:42:5: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:41:12: error: unused variable ‘tree’ [-Werror=unused-variable]
   41 |   TreeMap *tree=
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
90de45d
Thu 20 Apr 2023 11:52:51 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
5ed663c
Thu 20 Apr 2023 11:53:16 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
c150b74
Thu 20 Apr 2023 11:53:25 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
0b56735
Fri 21 Apr 2023 12:07:45 AM UTC: 
 treemap.c | 25 ++++++++++++++++++++++---
 1 file changed, 22 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:95:10: error: ‘pair’ undeclared (first use in this function); did you mean ‘Pair’?
   95 |   return pair;
      |          ^~~~
      |          Pair
treemap.c:95:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
68f7c15
Fri 21 Apr 2023 12:07:52 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
66b4612
Fri 21 Apr 2023 12:08:35 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
b3dbaf0
Fri 21 Apr 2023 12:23:09 AM UTC: 
 treemap.c | 37 +++++++++++++++++++++++++++++++++++++
 1 file changed, 37 insertions(+)
 tests:  12|6
total_score: 15/70
c5d6a5e
Fri 21 Apr 2023 12:25:21 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
ba6a402
Fri 21 Apr 2023 12:28:47 AM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  15|4
total_score: 25/70
6ad2989
Fri 21 Apr 2023 12:29:21 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
d89468b
Fri 21 Apr 2023 12:29:54 AM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  15|4
total_score: 25/70
620c525
Fri 21 Apr 2023 12:48:36 AM UTC: 
 treemap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  15|4
total_score: 25/70
efee4cb
